--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,4 +24,5 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 clap = { version = "4.5.32", features = ["derive"] }
 rand = "0.9.2"
+rayon = "1.11.0"
 
